--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grunt-angular-translate",
+  "name": "grunt-angular-swite-translate",
   "version": "0.3.3",
   "description": "Extract all the translation keys for angular-translate project",
   "main": "Gruntfile.js",
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/angular-translate/grunt-angular-translate.git"
+    "url": "git://github.com/pietrovismara/grunt-angular-swite-translate.git"
   },
   "keywords": [
     "AngularJS",
@@ -40,14 +40,14 @@
     "translate",
     "i18n"
   ],
-  "author": "Benjamin Longearet",
+  "author": "Pietro Vismara",
   "bugs": {
-    "url": "https://github.com/angular-translate/grunt-angular-translate/issues"
+    "url": "https://github.com/pietrovismara/grunt-angular-swite-translate/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/angular-translate/grunt-angular-translate/blob/master/LICENSEgit "
+      "url": "https://github.com/pietrovismara/grunt-angular-swite-translate/blob/master/LICENSEgit "
     }
   ],
   "gitHead": "dd655f85e3b4c59b7f3ac5ebf3f1ccad69876bb8",
